# custom-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
apps/web-console/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
apps/web-console/app/: globals.css  layout.tsx  page.tsx
apps/web-console/app/api/audit/[[...path]]/: route.ts
apps/web-console/app/api/chat/: route.ts
apps/web-console/app/api/health/: route.ts
apps/web-console/app/api/kb/[[...path]]/: route.ts
apps/web-console/app/api/keys/[[...path]]/: route.ts
apps/web-console/app/api/me/: route.ts
apps/web-console/app/api/sessions/[[...path]]/: route.ts
apps/web-console/app/api/skills/[[...path]]/: route.ts
apps/web-console/app/api/workspaces/[[...path]]/: route.ts
apps/web-console/components/: ChatPanel.tsx  CitationsCard.tsx  CommandPalette.tsx  CostDashboardDrawer.tsx  ErrorBoundary.tsx  KbDocDrawer.tsx  KbPanel.tsx  Markdown.tsx  MessageBubble.tsx  SessionTagsModal.tsx  SettingsDrawer.tsx  Sidebar.tsx  SkillSelector.tsx  SkillVarsModal.tsx  SkillsPanel.tsx  StatusBar.tsx  ToolCard.tsx  TraceInspector.tsx  UiHost.tsx  Welcome.tsx  WorkspaceSettingsDrawer.tsx  WorkspaceSwitcher.tsx
apps/web-console/hooks/: useAgent.ts  useKb.ts  useMe.ts  useMyBudget.ts  useSessions.ts  useSettings.ts  useSkillVars.ts  useSkills.ts  useTheme.ts  useWorkspaces.ts
apps/web-console/lib/: export.ts  sse.ts  storage.ts  templating.ts  types.ts  ui.ts
apps/web-console/lib/api/: audit.ts  keys.ts  me.ts  sessions.ts  skills.ts  workspaces.ts
apps/web-lite/: chat.html
docs/: 00-architecture-overview.md  01-infrastructure.md  02-llm-gateway.md  03-rag.md  04-tools-and-skills.md  05-agent-core.md  06-orchestration.md  07-observability-and-eval.md  08-security-and-governance.md  09-access-layer.md  10-current-problems-and-mitigations.md  11-model-strategy.md  12-llm-api-protocols.md  13-context-engineering.md  14-computer-and-browser-use.md  15-knowledge-engineering.md  16-opensource-stack-decision.md  17-prompt-engineering.md  18-hallucination-handling.md  19-vendor-landscape.md  20-deployment-and-operations.md  21-finops-cost-management.md  22-hitl-design.md  23-agent-sdlc.md  24-multi-tenant-isolation.md  25-data-compliance-and-residency.md  26-disaster-recovery-bcm.md  27-voice-agent.md  29-customer-onboarding-90day.md  30-vertical-templates.md  31-edge-and-on-device-ai.md  32-federated-knowledge.md  33-continuous-finetuning-loop.md  34-a2a-agent-collaboration.md  35-agent-simulation.md  36-xinchuang-and-sovereign-ai.md  37-rag-implementation-plan.md  99-expert-review-and-roadmap.md  PROJECT-OVERVIEW.md  README.md  (+12 more)
eval/: generate_qa.py  parser_comparison.md  qa_baseline.jsonl  review.py  review_workflow.md  run.py  thresholds.yml
eval/tests/: test_eval_gate.py
infra/: Caddyfile  Dockerfile.api-server  README.md  docker-compose.yml
infra/migrations/: 001_rag.sql  002_rag_bm25.sql  003_api_keys.sql  004_chat_persistence.sql  005_kb_jobs_collection.sql  006_workspaces_skills.sql  007_audit_role_tags.sql  008_member_budget.sql
infra/prometheus/: rules.yml
python-for-java/: basics.html  index.html
research/mineru-sandbox/: .gitignore  README.md  requirements.txt  run_compare.py
scripts/: html_to_pdf.py  md_to_html.py  md_to_opml.py  md_to_xmind.py  render_mermaid_local.sh
services/agent-core/: README.md  pyproject.toml
services/agent-core/src/agent_core/: __init__.py
services/agent-core/src/agent_core/guardrails/: __init__.py  limits.py
services/agent-core/src/agent_core/mcp/: __init__.py  client.py
services/agent-core/src/agent_core/runtime/: __init__.py  config.py  critic.py  executor.py  loop.py  planner.py  state.py
services/agent-core/src/agent_core/runtime/strategies/: __init__.py  base.py  react.py
services/agent-core/src/agent_core/tools/: __init__.py  protocol.py  registry.py
services/agent-core/tests/: test_acl_injection.py  test_executor.py  test_guardrails.py  test_planner.py  test_react_strategy.py  test_registry.py
services/api-server/: README.md  pyproject.toml
services/api-server/src/api_server/: __init__.py  acl.py  auth.py  config.py  cron.py  dependencies.py  ingest_worker.py  main.py  observability.py  registry_bootstrap.py  seed.py  title_generator.py
services/api-server/src/api_server/db/: api_keys.py  audit.py  chat.py  kb.py  skills.py  workspaces.py
services/api-server/src/api_server/routes/: __init__.py  audit.py  chat.py  feedback.py  health.py  kb.py  keys.py  me.py  sessions.py  skills.py  workspaces.py
services/api-server/tests/: test_acl.py  test_api_keys_hash.py  test_audit_routes.py  test_chat_budget.py  test_chat_multimodal.py  test_chat_retrieval_parser.py  test_chat_tool_filter.py  test_feedback.py  test_health.py  test_kb_routes.py  test_keys_routes.py  test_me_routes.py  test_session_tags_and_role.py  test_sessions_routes.py  test_skill_versions.py  test_skills_routes.py  test_workspaces_routes.py
services/gateway/: README.md  pyproject.toml
services/gateway/src/gateway/: __init__.py  client.py  router.py
services/gateway/tests/: test_router.py
services/tool-servers/calc-mcp/: README.md  pyproject.toml
services/tool-servers/calc-mcp/src/calc_mcp/: __init__.py  server.py
services/tool-servers/rag-mcp/: README.md  pyproject.toml
services/tool-servers/rag-mcp/src/rag_mcp/: acl.py  server.py
services/tool-servers/rag-mcp/tests/: test_acl_verify.py
services/tool-servers/time-mcp/: README.md  pyproject.toml
services/tool-servers/time-mcp/src/time_mcp/: __init__.py  server.py
services/tool-servers/web-search-mcp/: README.md  pyproject.toml
services/tool-servers/web-search-mcp/src/web_search_mcp/: __init__.py  server.py
