[project]
name = "agent-core"
version = "0.1.0"
description = "Agent runtime - L5 (ReAct loop, tool registry, guardrails)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "mcp>=1.0",
    "schemas",
    "gateway",
]

[tool.uv.sources]
schemas = { workspace = true }
gateway = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_core"]
