[project]
name = "gateway"
version = "0.1.0"
description = "LLM Gateway - L2 (LiteLLM-based)"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.55",
    "langfuse>=2.50,<4",  # 与 litellm 内置 callback 兼容
    "schemas",
]

[tool.uv.sources]
schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
