[project]
name = "calc-mcp"
version = "0.1.0"
description = "MCP server: 数学计算 (sqrt/sin/cos/log 等)"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0"]

[project.scripts]
calc-mcp = "calc_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calc_mcp"]
