[project]
name = "rag-mcp"
version = "0.1.0"
description = "MCP server: search_kb (RAG retrieval with ACL injection)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "rag-core",
]

[project.scripts]
rag-mcp = "rag_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_mcp"]
