[project]
name = "time-mcp"
version = "0.1.0"
description = "MCP server: 当前时间查询 (试点)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "tzdata>=2024.2",
]

[project.scripts]
time-mcp = "time_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/time_mcp"]
