[project]
name = "web-search-mcp"
version = "0.1.0"
description = "MCP server: Web 搜索 (stub - 后续接 Tavily/SerpAPI)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.scripts]
web-search-mcp = "web_search_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_search_mcp"]
